--- a/css/style.css
+++ b/css/style.css
@@ -10,87 +10,32 @@
     
 }
 
-/* .layout__wrapper{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 9% 82% 9% ;
-    grid-template-areas: 
-        "header"
-        "main"
-        "footer";
-} */
-
 /* Aca empieza el header */
 
-.header{
-    grid-area: header;    
-    background-color: black; 
-    display: grid;
-    grid-template-rows: 100%;
-    grid-template-columns: 50% 50% ;
-    grid-template-areas: 
-        "contenedor navbar";
-    width: 100%;
-    height: auto;
-}
-
 .logo__img{
-    transform: scale(0.8);
+    transform: scale(0.6);
     transition-property: all;
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
 }
 
 .logo__img:hover{
-    transform: scale(0.9);
+    transform: scale(0.7);
 
 }
 
-.contenedor {
-    grid-area: contenedor;
+.logo__link {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-
-}
-
-.header__logo {
-    margin-right: 5%;
+    align-items: center;
     
 }
+.logo__title {
+    color: gray;
 
-.header__title {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: white;
-    height: 100%;
 }
 
-.title__h3 {
-    display: flex;
-    justify-content: center;
-}
 
-.navbar { 
-    grid-area: navbar;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end ;
-    padding-bottom: 2%;
-}
-
-.navbar__menu {
-    list-style: none;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 70%;
-}
-
-.menu__link {
+ .menu__link {
     text-decoration: none;
     color: white;
     transition-property: all;
@@ -101,6 +46,10 @@
 .menu__link:hover {
     font-weight: bolder;
     border-bottom: solid 1px white;
+}
+
+.nav-item {
+    padding-right: 1%;
 }
 
 /* Aca empieza el main */
@@ -474,7 +423,7 @@
     max-width: 100%;
     max-height: 100%;
 }
-.row {
+.roww {
     display: grid;
     grid-template-rows: 20% 20% 20% 20% 20%;
     grid-template-columns: 50% 50%;
