--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,9 @@ html {
     height: 100vh;
     background-color: lightgray;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
 }
 
 /* Aca empieza el header */
-
-
 .logo__img{
     transform: scale(0.6);
     transition-property: all;
@@ -26,18 +23,16 @@ html {
 
 .logo__img:hover{
     transform: scale(0.7);
-
 }
 
 .logo__link {
     display: flex;
-    align-items: center;
-    
+    align-items: center; 
 }
+
 .logo__title {
     color: gray;
     font-size: 1.4rem;
-
 }
 
 .estilo__div {
@@ -86,7 +81,6 @@ html {
 
 .fotoprincipal {
     grid-area: foto;
-
 }   
 
 .fotoprincipal__img {
@@ -115,13 +109,11 @@ html {
 
 
 .precio__desde {
-
     border-style: inset;
     border-width: 3px;
 }
 
 .precio__hasta {
-    
     border-style: inset;
     border-width: 3px;
 }
@@ -136,6 +128,7 @@ html {
     transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
 }
+
 .submit_resett {
     border-style: inset;
     border-width: 3px;
@@ -210,9 +203,6 @@ html {
     height: 500px;
 }
 
-
-
-
 /* Aca empieza el footer */
 
 .footer {
@@ -252,17 +242,14 @@ html {
     justify-content: flex-end;
     width: 80%;
     margin-top: 3%;
-
 }
 
 .redes__title {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    width: 85%;
+    width: 75%;
     color: gray;
-
-
 }
 
 .redes {
@@ -273,8 +260,6 @@ html {
     align-self: center;
     justify-self: center;
 }
-
-
 
 .footer__button--link {
     text-decoration: none;
@@ -289,48 +274,13 @@ html {
     border-bottom: solid 1px gray;
     color: gray;
 }
-
 /* Aca termina el footer */
+
+
+/* Seccion Propiedades */
 
 .fotoprincipal__img {
     width: 100%;
-}
-
-
-.props__container {
-    display: grid;
-    justify-items: center;
-    grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr ;
-    grid-template-columns: 1fr;
-    grid-template-areas: 
-        "props1"
-        "props2"
-        "props3"
-        "props4";
-}
-
-.props {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 100%;
-    width: 75%;
-    margin-top: 2%;
-
-}
-
-.props__reverse {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    height: 100%;
-    width: 75%;
-    margin-top: 2%;
-}
-
-.props__linkimg {
-    width: 100%;
-    height: 100%;
 }
 
 .props__img {
@@ -338,15 +288,14 @@ html {
     height: 500px;
 }
 
-
-.props__div--piframe {
-    width: 100%;
-    height: auto;
+.props {
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 .props__title {
     height: auto;
-}
+} 
 
 .props__title--title {
     text-align: center;
@@ -368,6 +317,8 @@ html {
     padding-top: 5px;
 }
 
+/* Seccion Nosotros */
+
 .mision {
     display: flex;
     flex-direction: row;
@@ -377,7 +328,6 @@ html {
     margin-top: 3%;
     margin-left: 18%;
     margin-right: 18%;
-
 }
 
 .mision__texto {
@@ -412,10 +362,10 @@ html {
     width: 50%;
     margin: 5% 0 5% 0;
     padding: 3% 7% 3% 7%;
-    border: 1px solid #CED5D7;
-    border-radius: 2%;
-    background-color: white;
-    box-shadow: 0px 5px 10px #B5C1C5, 0 0 0 10px #EEF5F7 inset;
+    border: 1px solid #000102;
+    border-radius: 4%;
+    background-color: rgba(255, 255, 255, 0.673);
+    box-shadow: 0px 5px 10px #B5C1C5, 0 0 0 10px #eef5f7c0 inset;
 }
 
 .form__container--general{
@@ -428,7 +378,7 @@ html {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 10% 10% 10% 10%;
+    padding: 5% 5% 5% 5%;
 }
 
 .fieldset__text{
@@ -480,114 +430,13 @@ html {
     height: 450px;
 }
 
-.general {
+.row__general {
     max-width: 100%;
     max-height: 100%;
-}
-.roww {
-    display: grid;
-    grid-template-rows: 20% 20% 20% 20% 20%;
-    grid-template-columns: 50% 50%;
-    grid-template-areas: 
-        "row1 row1"
-        "row2 row2"
-        "row3 row3"
-        "row4 row4"
-        "row5 row5";
-}
-
-.row1 {
-    grid-area: row1;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.row2 {
-    grid-area: row2;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.row3 {
-    grid-area: row3;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.row4 {
-    grid-area: row4;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.row5 {
-    grid-area: row5;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
 }
 
 @media (max-width: 360px) {
 
-    /* .header{
-
-        display: grid;
-        grid-template-rows: 25vh;
-        grid-template-columns: 50% 50% ;
-        height: auto;       
-    }
-
-    .header__logo {
-        height: 75%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    .logo__img{
-        width: 100%;
-        height: 90px;
-    }
-    
-    .header__title {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        height: auto;
-        margin-bottom: 4%;
-        
-    }
-    .title__h1 {
-        font-size: 80%;
-    }
-
-    .title__h3 {
-        font-size: 80%;
-    }
-
-    .contenedor {
-        display: flex;
-        flex-direction: column;
-        align-content: flex-end;
-        width: 100%;
-        height: auto;  
-        align-items: end ; 
-    }
-    
-    .navbar { 
-        justify-content: end;
-        align-items: center ;
-        padding-bottom: 2%;
-    }
-    
-    .navbar__menu {
-        flex-direction: column;
-    }
-     */
     .main {
         grid-template-rows: 3% 17% 38% 4% 38%;
     }
@@ -655,7 +504,7 @@ html {
     }
     
     .footer {
-        grid-template-rows: 20% 20% 20% 35% 1%;
+        grid-template-rows: 27% 16% 17% 35% 1%;
         grid-template-columns: 50% 50%;
         grid-template-areas: 
             "titulo titulo"
@@ -671,6 +520,8 @@ html {
     .footer__redes{
         grid-area: titulo;
         width: 100%;
+        margin-right: 3%;
+        margin-top: 2%;
     }
 
     .redes__redes {
@@ -687,15 +538,6 @@ html {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-
-    }
-
-    .props {
-        flex-direction: column;
-    }
-
-    .props__reverse {
-        flex-direction: column;
     }
 
     .props__img {
@@ -747,6 +589,4 @@ html {
         grid-template-rows: 5% 5% 5% 5% 5%;
         grid-template-columns: 10% 10%;
     }
-    
-
 }
