--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ html {
     padding-right: 1%;
 }
 
-/* Aca empieza el main */
+/* Seccion Home */
 .main {
     grid-area: main;
     background-color: lightgray;
@@ -351,7 +351,7 @@ html {
     margin-left: 46.5%;
 }
 
-/* SECCIÓN CONTACTO */
+/* Seccion Contacto */
 
 .main__container--contacto{
     display: flex;
@@ -526,7 +526,7 @@ html {
     .footer__redes{
         grid-area: titulo;
         width: 100%;
-        margin-right: ;
+        margin-right: 0% ;
         margin-top: 2%;
     }
 
