--- a/css/style2.css
+++ b/css/style2.css
@@ -10,6 +10,36 @@ html {
   background-color: lightgray;
   font-family: Verdana, Geneva, Tahoma, sans-serif; }
 
+.p-1 {
+  padding: 1%; }
+
+.p-2 {
+  padding: 2%; }
+
+.p-3 {
+  padding: 3%; }
+
+.p-4 {
+  padding: 4%; }
+
+.p-5 {
+  padding: 5%; }
+
+.m-1 {
+  padding: 1%; }
+
+.m-2 {
+  padding: 2%; }
+
+.m-3 {
+  padding: 3%; }
+
+.m-4 {
+  padding: 4%; }
+
+.m-5 {
+  padding: 5%; }
+
 /* Aca empieza el header */
 .logo__img {
   transform: scale(0.6);
@@ -154,7 +184,7 @@ html {
   border-style: inset;
   border-width: 3px; }
 
-.submit_reset {
+.submit_reset, .submit_resett {
   border-style: inset;
   border-width: 3px;
   font-size: medium;
@@ -164,17 +194,7 @@ html {
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out; }
 
-.submit_resett {
-  border-style: inset;
-  border-width: 3px;
-  font-size: medium;
-  color: white;
-  background-color: black;
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: ease-in-out; }
-
-.submit_reset:hover {
+.submit_reset:hover, .submit_resett:hover {
   background-color: white;
   color: black; }
 
@@ -354,6 +374,71 @@ html {
   width: 100%;
   padding-top: 5px; }
 
+@media (max-width: 992px) {
+  .navbar-brand {
+    height: 50% !important; }
+  .main {
+    grid-template-rows: 6% 30% 14% 6% 45%; }
+  .bottom {
+    font-size: 100%; }
+  .fotoprincipal {
+    max-width: 100%; }
+  .fotoprincipal__img {
+    width: 100%;
+    height: 95%; }
+  .forms__titles {
+    margin-bottom: 3%;
+    font-size: 120%; }
+  .submit_reset, .submit_resett {
+    font-size: 100%; }
+  .submit_resett {
+    font-size: 100%; }
+  .destacadas__title {
+    font-size: 50%; }
+  .uno__img {
+    width: 200px;
+    height: 200px; }
+  .dos__img {
+    width: 200px;
+    height: 200px; }
+  .tres__img {
+    width: 200px;
+    height: 200px; }
+  .cuatro__img {
+    width: 200px;
+    height: 200px; }
+  .props__img {
+    max-height: 300px !important; }
+  .props__text {
+    font-size: 80%; }
+  .props__iframe {
+    padding-top: 5px;
+    padding-bottom: 5px; }
+  .mision {
+    font-size: 80%;
+    width: 95%;
+    margin-top: 1%;
+    margin-left: 1%;
+    margin-right: 1%; }
+  .mision__title {
+    font-size: medium; }
+  .horarios {
+    display: flex;
+    flex-direction: column;
+    border-collapse: collapse;
+    margin-bottom: 0%;
+    margin-left: 0%;
+    margin-right: 0%; }
+  .img__img {
+    width: 150px;
+    height: 150px; }
+  .general {
+    max-width: 100%;
+    max-height: 100%; }
+  .row {
+    grid-template-rows: 5% 5% 5% 5% 5%;
+    grid-template-columns: 10% 10%; } }
+
 @media (max-width: 768px) {
   .navbar-brand {
     height: 50% !important; }
@@ -377,7 +462,7 @@ html {
     width: 10%; }
   .precio__hasta {
     width: 10%; }
-  .submit_reset {
+  .submit_reset, .submit_resett {
     font-size: 100%; }
   .submit_resett {
     font-size: 100%; }
@@ -405,7 +490,7 @@ html {
   .footer__redes {
     grid-area: titulo;
     width: 100%;
-    margin-right: 0%;
+    margin-right: 25%;
     margin-top: 2%; }
   .redes__redes {
     justify-content: center;
@@ -451,7 +536,28 @@ html {
     grid-template-rows: 5% 5% 5% 5% 5%;
     grid-template-columns: 10% 10%; } }
 
-@media (max-width: 768px) and (max-width: 360px) {
+@media (max-width: 600px) {
+  .destacadas__title {
+    font-size: 80%; }
+  .uno__img {
+    width: 140px;
+    height: 140px; }
+  .dos__img {
+    width: 140px;
+    height: 140px; }
+  .tres__img {
+    width: 140px;
+    height: 140px; }
+  .cuatro__img {
+    width: 140px;
+    height: 140px; }
+  .footer__redes {
+    grid-area: titulo;
+    width: 100%;
+    margin-right: 20%;
+    margin-top: 2%; } }
+
+@media (max-width: 360px) {
   .main {
     grid-template-rows: 3% 15% 38% 4% 45%; }
   .bottom {
@@ -472,7 +578,7 @@ html {
     width: 50%; }
   .precio__hasta {
     width: 50%; }
-  .submit_reset {
+  .submit_reset, .submit_resett {
     width: 30%; }
   .submit_resett {
     width: 40%; }
