--- a/scss/mquerie.scss
+++ b/scss/mquerie.scss
@@ -1,4 +1,116 @@
 
+@media (max-width: 992px) {
+    
+    .navbar-brand {
+        height: 50% !important;
+    }
+
+    .main {
+        grid-template-rows: 6% 30% 14% 6% 45%;
+    }
+    .bottom {
+        font-size: 100%;
+    }
+    
+    .fotoprincipal {
+        max-width: 100%;
+        
+    }
+
+    .fotoprincipal__img {
+        width: 100%;
+        height: 95%;
+    }
+    
+    
+    .forms__titles {
+        margin-bottom: 3%;
+        font-size: 120%;
+    }
+    
+
+    .submit_reset {
+        font-size: 100%;
+        
+    }
+
+    .submit_resett {
+        font-size: 100%;
+    }
+
+    .destacadas__title {
+        font-size: 50%;
+    }
+    
+    .uno__img {
+        width: 200px;
+        height: 200px;
+    }
+    
+    .dos__img {
+        width: 200px;
+        height: 200px;
+    }
+    .tres__img {
+        width: 200px;
+        height: 200px;
+    }
+    .cuatro__img {
+        width: 200px;
+        height: 200px;
+    }
+    
+    .props__img {
+        max-height: 300px !important;
+        
+    }
+
+    .props__text {
+        font-size: 80%;
+    }
+
+    .props__iframe {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .mision {
+        font-size: 80%;
+        width: 95%;
+        margin-top: 1%;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+    
+    .mision__title {
+        font-size: medium;
+    }
+    
+    .horarios {
+        display: flex;
+        flex-direction: column;
+        border-collapse: collapse;
+        margin-bottom: 0%;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .img__img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .general {
+        max-width: 100%;
+        max-height: 100%;
+    }
+    .row {
+        grid-template-rows: 5% 5% 5% 5% 5%;
+        grid-template-columns: 10% 10%;
+    }
+
+}
+
 @media (max-width: 768px) {
     
     .navbar-brand {
@@ -89,7 +201,7 @@
     .footer__redes{
         grid-area: titulo;
         width: 100%;
-        margin-right: 0% ;
+        margin-right: 25% ;
         margin-top: 2%;
     }
 
@@ -158,6 +270,41 @@
         grid-template-rows: 5% 5% 5% 5% 5%;
         grid-template-columns: 10% 10%;
     }
+}    
+
+@media (max-width: 600px) {
+    
+
+    .destacadas__title {
+        font-size: 80%;
+    }
+    
+    .uno__img {
+        width: 140px;
+        height: 140px;
+    }
+    
+    .dos__img {
+        width: 140px;
+        height: 140px;
+    }
+    .tres__img {
+        width: 140px;
+        height: 140px;
+    }
+    .cuatro__img {
+        width: 140px;
+        height: 140px;
+    }
+    
+    .footer__redes{
+        grid-area: titulo;
+        width: 100%;
+        margin-right: 20%;
+        margin-top: 2%;
+    }
+}
+
     @media (max-width: 360px) {
     
         .main {
@@ -313,4 +460,3 @@
             grid-template-columns: 10% 10%;
         }
     }
-}
